Finished SQL transition
Front-end changes
converting works